--- a/report.tex
+++ b/report.tex
@@ -12,11 +12,15 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{Spreadsheet Program Report}
-\lhead{Your Name}
+\lhead{}
 \rfoot{\thepage}
 
 \title{Spreadsheet Program Report}
-\author{Your Name}
+\author{
+Mayank Goel (2023CS10204) \\
+Ahilaan Saxena (2023CS10076) \\
+Mohil Shukla (2023CS10186)
+}
 
 \begin{document}
 \maketitle
@@ -72,6 +76,7 @@ The efficiency and robustness of our spreadsheet application are driven by caref
         \item The advanced formulas list is maintained as a dynamic array, which stores pointers to cells that contain advanced formulas.
         \item This structure provides quick access and iteration when recalculating advanced formulas.
     \end{itemize}
+    \newpage
     \item \textbf{Contiguous Memory Blocks:}
     \begin{itemize}[noitemsep]
         \item The spreadsheet table is allocated in one contiguous block, improving cache locality and performance during recalculations.
@@ -136,7 +141,7 @@ The system handles several error and edge-case scenarios:
 
 \section{Demo and Repository Links}
 \begin{itemize}[noitemsep]
-    \item \textbf{Video Demo:} \url{https://yourvideodemo.link}
+    \item \textbf{Video Demo:} \url{https://drive.google.com/drive/folders/1E3mQM_7gJPa9M_z0DZccGfe5xCw237Dx?usp=sharing}
     \item \textbf{GitHub Repository:} \url{https://github.com/mayankgoel2005/lab1_2023CS10204_2023CS10186_2023CS10076}
 \end{itemize}
 
